# empowering-small-scale-kg

./: .dvcignore  .gitignore  LICENSE  README.md  dvc.yaml  pyproject.toml
.github/workflows/: python_poetry.yml  python_poetry_main.yml
data/experiments/FB15K237/FB15K237_triple_06/RotatE/k_2_extra_relation/: .gitignore
data/experiments_results/: .gitignore
data/notebooks/: .gitignore
data/plots/: .gitignore
data/sampled_datasets/: .gitignore
experiments/configs/sampling/: FB15K237.yaml  WD50K.yaml  WN18RR.yaml
experiments/configs/training/: FB15k237.yaml  WD50K.yaml  WN18RR.yaml  alignment.yaml  dvc.yaml  generation_config_combined_training_items.yaml  generation_config_standard_training_items.yaml  gk_datasets.yaml  model.yaml
experiments/configs/training/training_items/: FB15K237_FB15K237_combined.yaml  FB15K237_standard.yaml  WD50K_WD50K_combined.yaml  WD50K_standard.yaml  WN18RR_combined.yaml  WN18RR_standard.yaml  sampled_FB15K237_ConceptNet_combined.yaml  sampled_FB15K237_YAGO_combined.yaml  sampled_WD50K_FB15K237_combined.yaml  sampled_WD50K_YAGO_combined.yaml  sampled_WN18RR_ConceptNet_combined.yaml  sampled_WN18RR_FB15K237_combined.yaml  weighted_WN18RR_combined.yaml
experiments/notebooks/: 10_loss.ipynb  14_ablation_concatenation.ipynb  2_dataset_stats.ipynb  4_analyse_experiments.ipynb
experiments/scripts/: generate_combined_training_items.py  generate_standard_training_items.py  run_combined_training.py  run_standard_training.py  run_training_stages_helper.py  sample_dataset.py
experiments/scripts/utils/: run_WD50K_decoding.py  run_extraction_conceptnet_en.py  run_results_download.py
mgi/: defaults.py
mgi/data/: combined_datasets.py  sampled_datasets.py  weighted.py
mgi/data/datasets/: conceptnet.py  dataset_utils.py  fb15k237decoded.py  kgdataset.py  wd50k.py  wn18rrdecoded.py  yago.py
mgi/loss/: __init__.py  weighted.py
mgi/mappings/: alignment.py  base_mapping.py  nn_mapping.py  similarity_embeddings.py
mgi/metrics/: anonymization.py
mgi/metrics/eda/: dataset_analyser.py
mgi/models/: factory.py
mgi/results/: wandb_helpers.py
mgi/samplers/: base_sampler.py  random_node_sampler.py  random_relation_sampler.py  random_triple_sampler.py
mgi/training/: __init__.py  config.py  training_pipeline.py  utils.py  weighted.py
mgi/utils/: config.py  utils.py
tests/: test_mgi.py
